--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "puyo",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Gomoku",
   "main": "docs/index.html",
   "scripts": {
     "serve": "parcel front/index.html --port 80",
-    "build": "parcel build front/index.html"
+    "build": "parcel build front/index.html --public-url ./"
   },
   "author": "kekemoto",
   "license": "AGPL-3.0-or-later",
   "devDependencies": {
     "@types/p5": "^0.9.1",
-    "parcel": "^2.0.0-beta.1",
+    "parcel": "^2.0.0-beta.2",
     "typescript": "^4.2.3",
     "webpack": "^5.36.2"
   }
